--- a/index.html
+++ b/index.html
@@ -6,6 +6,24 @@
 	<title>2048 clone by Exorion</title>
 </head>
 <body>
+	<div id="board">
+		<div id="box1" class="tile"></div>
+		<div id="box2" class="tile"></div>
+		<div id="box3" class="tile"></div>
+		<div id="box4" class="tile"></div>
+		<div id="box5" class="tile"></div>
+		<div id="box6" class="tile"></div>
+		<div id="box7" class="tile"></div>
+		<div id="box8" class="tile"></div>
+		<div id="box9" class="tile"></div>
+		<div id="box10" class="tile"></div>
+		<div id="box11" class="tile"></div>
+		<div id="box12" class="tile"></div>
+		<div id="box13" class="tile"></div>
+		<div id="box14" class="tile"></div>
+		<div id="box15" class="tile"></div>
+		<div id="box16" class="tile"></div>
+	</div>
 
 	<script type="text/javascript" src="main.js"></script>
 </body>
